[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/sprites/save_statue.png" type="Texture" id=1]
[ext_resource path="res://objects/ui/ButtonKeyGamepadIcon.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/SaveStatue.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/save_statue_orb.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5806, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 64, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 64, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 64, 384, 64, 64 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "saved",
"speed": 10.0
} ]

[node name="SaveStatue" type="RigidBody2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -7, -37 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="ButtonKeyGamepadIcon" parent="." instance=ExtResource( 2 )]
margin_left = -8.0
margin_top = -93.0
margin_right = 8.0
margin_bottom = -77.0
animated = true
action = "ui_down"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -32 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 18, -58 )
frames = SubResource( 14 )
animation = "idle"
frame = 2
playing = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
